syntax = "proto3";

package nomos.provider.v1;

option go_package = "github.com/autonomous-bits/nomos-provider-environment-variables/proto/providerv1";

import "google/protobuf/struct.proto";

// ProviderService is the gRPC contract for Nomos providers
service ProviderService {
  rpc Init(InitRequest) returns (InitResponse);
  rpc Fetch(FetchRequest) returns (FetchResponse);
  rpc Info(InfoRequest) returns (InfoResponse);
  rpc Health(HealthRequest) returns (HealthResponse);
  rpc Shutdown(ShutdownRequest) returns (ShutdownResponse);
}

message InitRequest {
  string alias = 1;
  google.protobuf.Struct config = 2;
  string source_file_path = 3;
  
  reserved 4 to 10;
}

message InitResponse {
  reserved 1 to 10;
}

message FetchRequest {
  repeated string path = 1;
  
  reserved 2 to 10;
}

message FetchResponse {
  google.protobuf.Struct value = 1;
  
  reserved 2 to 10;
}

message InfoRequest {
  reserved 1 to 10;
}

message InfoResponse {
  string alias = 1;
  string version = 2;
  string type = 3;
  
  reserved 4 to 10;
}

message HealthRequest {
  reserved 1 to 10;
}

enum HealthStatus {
  STATUS_UNSPECIFIED = 0;
  STATUS_OK = 1;
  STATUS_DEGRADED = 2;
  STATUS_STARTING = 3;
}

message HealthResponse {
  HealthStatus status = 1;
  string message = 2;
  
  reserved 3 to 10;
}

message ShutdownRequest {
  reserved 1 to 10;
}

message ShutdownResponse {
  reserved 1 to 10;
}
